base/local.css
body {
	font-family: sans-serif;
	padding: 0 1ch;
	margin: 10px auto;
	max-width: 112ch;
}

/* article.page {
	display: grid;
	grid-template-areas: "header sidebar"
	"main sidebar"
	"footer sidebar";
	grid-gap: 0 1em;
	max-width: 112ch;
	grid-template-columns: 250px 1fr;
	grid-template-rows: min-content 1fr;
}
section#pagebody { grid-area: main }
section#footer { grid-area: footer } */

section.pageheader {
    border-bottom: 1px solid;
    margin-bottom: 20px;
    padding-bottom: 10px;
}
section#content th { text-align: center }
section#content th,
section#content td {
	border: 1px solid;
	padding: 0 10px;
}
section#content table {
	border: 1px solid;
	margin: auto;
    empty-cells: hide;
}

section#content table.no-border {
    border: 0;
}

section#content td.spread-img {
    padding: 0;
    margin: 0;
    border: 0;
    /* Pesky whitespace text nodes */
    font-size: 0rem;
}

section#content :is(h1, h2, h3, h4, h5, h6) {
	border-bottom: 1px solid;
	padding: 5px 10px;
	text-align: right;
}

section#content {
	-moz-hyphens: auto;
	line-height: 1.8;
	font-size: 16px;
	text-align: justify;
}

section#content .longlink {
	word-break: break-all;
}

#content .left-float {
    float: left;
    margin: 0 2ch 2ch 0 !important;
}

#content #startpage-icon {
    max-width: 30ch;
}

@media only screen and (max-width: 700px) {
	section#content { text-align: initial }
}

@media only screen and (max-width: 600px) {
    #content .left-float { float: none !important; margin: 2ch auto !important; }
    #content #startpage-icon {
        max-width: initial;
    }
}

.toc {
    border: 1px solid;
    width: 50ch;
    max-width: 100%;
    margin: 10px auto 0 auto;
    text-align: initial;
}

.toc li {
    list-style: upper-roman;
}

a { text-decoration: none }
a { color: blue; transition: color .2s }
a:hover { color: red }
section#content p a[href^="."],
section#content figcaption a[href^="."] {
	background-image: linear-gradient(blue, blue);
	padding: 0 .5ch;
	background-position: 0 100%;
	background-repeat: repeat-x;
	background-size: 4px 50px;
	color: white;
	text-decoration: none;
	transition: background-size .2s, color .4s;
}
section#content a[href^="."]:hover {
	color: red;
	background-size: 1px 1px;
}

.biggestPC {
    font-size: 180%;
}

.bigPC {
    font-size: 140%;
}

.normalPC {
    font-size: 120%;
}

.smallPC {
    font-size: 100%;
}

.pagecloud {
    display: flex;
    float: initial;
    width: 60ch;
    max-width: calc(100% - 22px);
    padding: initial 5px;
    margin: auto;
    flex-wrap: wrap;
    gap: 4ch;
    justify-content: space-evenly;
    align-items: center;
}

section#content > p + p {
	text-indent: 30px;
}

#sundial-motto { font-style: italic }
#time { font-size: 2rem }

/* PhotoViewer */
.psv-panel-close-button {
    display: none;
}

.parentlinks a {
	padding-right: 5px;
}
ul.net-presence {
	padding-left: 0;
}
ul .twitter, ul .linkedin, ul .github, ul .website {
	list-style: none;
	display: inline-block;
}
ul .website:before {
	content: url('/wikiicons/article.svg');
	margin: 0 10px;
	display: inline-block;
	width: 1rem;
	color: #6a737d;
}
ul .linkedin:before {
	content: url('/wikiicons/work.svg');
	margin: 0 10px;
	display: inline-block;
	width: 1rem;
	color: #6a737d;
}
ul .github:before {
	content: url('/wikiicons/github.svg');
	margin: 0 10px;
	display: inline-block;
	width: 1rem;
	color: #6a737d;
}
ul .twitter:before {
	content: url('/wikiicons/twitter.svg');
	margin: 0 10px;
	display: inline-block;
	width: 1rem;
	color: #6a737d;
}

footer nav {
	margin: 1rem 0;
}

figure {
	margin: 1rem
	hyphens: none;
	-moz-hyphens: none }
#content figure {
	display: block;
	text-align: center;
	margin: 0 auto }
#content .image-square {
    display: flex;
}
#content .image-square > * {
    flex: 1;
}
#content .image-square img {
    max-width: 100%;
}
.tags {
    margin-top: 5px;
}

p img {
	display:block;
	max-width: calc(100% - 2px);
	margin: auto;
}
p {
	overflow-x: auto;
	max-width: 100%;
}
p img[src$="linkmap.png"] {
	max-width: initial !important;
}
#viewer {
	max-width: calc(80% - 2px) !important;
}

#viewer, .psv-canvas-container {
	height: 500px !important;
}

figure img, figure video, figure > [id^=viewer] {
	max-width: calc(100% - 2px);
	display: block;
	border: 1px solid;
	margin: auto;
	height: auto }
figure.profile img {
	width: 300px;
}

#startpage-popout {
}

.syntax {
	display: block;
	padding: 5px;
	background-color: cornsilk;
	border-radius: 5px;
	border: 2px solid cornflowerblue;
	padding: 15px 10px;
	max-width: 100%;
	tab-size: 2;
	-moz-tab-size: 2;
	overflow-x: auto;
	line-height: initial;
	font-family: "Andale Mono", Hack, "Lucida Console", Monaco, monospace;
	font-size: 0.9rem;
}

.synComment { color: blue }
.synConstant, .synSpecial { color: deeppink }
.synStatement { color: green }
.synType { color: purple }

a[href$="jpeg"], a[href$="png"], a[href$="jpg"], a[href$="gif"] {
	display: block;
	background-image: none !important;
	background-size: none !important;
	color: black !important;
	display: inline-block;
}

@media (prefers-color-scheme: dark) {
	body {
		background-color: #121212;
		color: white;
	}
	.pagecloud {
		background: #121212;
		border-color: white;
	}
	a { color: cyan; }
	section#content p a[href^="."], section#content figcaption a[href^="."] {
		background-image: linear-gradient(cyan, cyan);
		color: black;
	}
	figure img, figure video, figure > [id^="viewer"] {
		border-color: white;
	}
}

